--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,7 @@
-spring.application.name=movieshub
-spring.data.mongodb.uri=mongodb://localhost:27017/movieshubdb
+spring.datasource.url=jdbc:mysql://localhost:3306/movieshubdb?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=061104Dd@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 server.port=8080
