--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,23 @@
 spring.application.name=backend
+# Database configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/movieshub
 spring.datasource.username=root
 spring.datasource.password=061104Dd@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
-server.port=8080
+
+
+
+# Email configuration for OTP
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=devkr074@gmail.com
+spring.mail.password=790047Dd@
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+server.ssl.enabled=false
+
+
+spring.mail.protocol=smtp
+spring.mail.smtp.auth=true
+spring.mail.smtp.starttls.enable=true
